// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should render disabled without problem 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
  opacity: 0.4;
  border-color: hsl(207,22%,90%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={true}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={true}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={true}
      width="25rem"
    >
      <styled.input
        disabled={true}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={true}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render error without problem 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.8rem;
  height: 1.8rem;
  margin-right: 0.7rem;
  border-radius: 50%;
  background: hsl(6,79%,65%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
  border-color: hsl(6,79%,65%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 1.1rem;
  line-height: 1.1rem;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={true}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={true}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
      <Styled(Input.Status)
        hasFocus={false}
        status="error"
      >
        <Input.Status
          className="c2"
          hasFocus={false}
          status="error"
        >
          <div
            className="c2"
          >
            <Styled(Icon)
              color="hsl(0, 100%, 100%)"
              height="1.1rem"
              name="cross"
              spin={false}
              width="1.1rem"
            >
              <Icon
                className=""
                color="hsl(0, 100%, 100%)"
                height="1.1rem"
                name="cross"
                spin={false}
                width="1.1rem"
              >
                <styled.div
                  className=""
                  height="1.1rem"
                  spin={false}
                  width="1.1rem"
                >
                  <div
                    className="c3"
                    height="1.1rem"
                    width="1.1rem"
                  >
                    <svg
                      height="1.1rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1.1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M286.17 256l112.915 112.915c8.331 8.331 8.331 21.839 0 30.17-8.331 8.331-21.839 8.331-30.17 0L256 286.17 143.085 399.085c-8.331 8.331-21.839 8.331-30.17 0-8.331-8.331-8.331-21.839 0-30.17L225.83 256 112.915 143.085c-8.331-8.331-8.331-21.839 0-30.17 8.331-8.331 21.839-8.331 30.17 0L256 225.83l112.915-112.915c8.331-8.331 21.839-8.331 30.17 0 8.331 8.331 8.331 21.839 0 30.17L286.17 256z"
                        fill="hsl(0, 100%, 100%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Status>
      </Styled(Input.Status)>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render ghost input without problem 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
  border: 0;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={true}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={true}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render info without problem 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.8rem;
  height: 1.8rem;
  margin-right: 0.7rem;
  border-radius: 50%;
  background: hsl(200,74%,46%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
  border-color: hsl(200,74%,46%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 2rem;
  line-height: 2rem;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={true}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={true}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
      <Styled(Input.Status)
        hasFocus={false}
        status="info"
      >
        <Input.Status
          className="c2"
          hasFocus={false}
          status="info"
        >
          <div
            className="c2"
          >
            <Styled(Icon)
              color="hsl(0, 100%, 100%)"
              height="2rem"
              name="info"
              spin={false}
              width="2rem"
            >
              <Icon
                className=""
                color="hsl(0, 100%, 100%)"
                height="2rem"
                name="info"
                spin={false}
                width="2rem"
              >
                <styled.div
                  className=""
                  height="2rem"
                  spin={false}
                  width="2rem"
                >
                  <div
                    className="c3"
                    height="2rem"
                    width="2rem"
                  >
                    <svg
                      height="2rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="2rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 492C125.66 492 20 386.34 20 256S125.66 20 256 20s236 105.66 236 236-105.66 236-236 236zm21.333-150.667V256c0-11.782-9.55-21.333-21.333-21.333-11.782 0-21.333 9.55-21.333 21.333v85.333c0 11.782 9.55 21.334 21.333 21.334 11.782 0 21.333-9.552 21.333-21.334zM256 192c11.782 0 21.333-9.551 21.333-21.333 0-11.782-9.55-21.334-21.333-21.334-11.782 0-21.333 9.552-21.333 21.334S244.217 192 256 192z"
                        fill="hsl(0, 100%, 100%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Status>
      </Styled(Input.Status)>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render input without problem when given a text label 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1.1rem;
  color: hsl(206,16%,60%);
  background: hsl(216,45%,98%);
  border-right: 1px solid hsl(207,22%,90%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c2::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c2:-moz-placeholder {
  font-size: 1.4rem;
}

.c2::-moz-placeholder {
  font-size: 1.4rem;
}

.c2:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c2:focus,
.c2:active {
  outline: none;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={
    Object {
      "text": "Pickle Rick",
    }
  }
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <Styled(Input.Label)
        label={
          Object {
            "text": "Pickle Rick",
          }
        }
        position="left"
      >
        <Input.Label
          className="c1"
          label={
            Object {
              "text": "Pickle Rick",
            }
          }
          position="left"
        >
          <div
            className="c1"
          >
            <span>
              Pickle Rick
            </span>
          </div>
        </Input.Label>
      </Styled(Input.Label)>
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c2"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render input without problem when given an icon label 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1.1rem;
  color: hsl(206,16%,60%);
  background: hsl(216,45%,98%);
  border-right: 1px solid hsl(207,22%,90%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c3::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c3:-moz-placeholder {
  font-size: 1.4rem;
}

.c3::-moz-placeholder {
  font-size: 1.4rem;
}

.c3:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c3:focus,
.c3:active {
  outline: none;
}

.c2 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 1.6rem;
  line-height: 1.6rem;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={
    Object {
      "icon": "cog",
    }
  }
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <Styled(Input.Label)
        label={
          Object {
            "icon": "cog",
          }
        }
        position="left"
      >
        <Input.Label
          className="c1"
          label={
            Object {
              "icon": "cog",
            }
          }
          position="left"
        >
          <div
            className="c1"
          >
            <Styled(Icon)
              color="hsl(206,23%,69%)"
              height="1.6rem"
              name="cog"
              width="1.6rem"
            >
              <Icon
                className=""
                color="hsl(206,23%,69%)"
                height="1.6rem"
                name="cog"
                spin={false}
                width="1.6rem"
              >
                <styled.div
                  className=""
                  height="1.6rem"
                  spin={false}
                  width="1.6rem"
                >
                  <div
                    className="c2"
                    height="1.6rem"
                    width="1.6rem"
                  >
                    <svg
                      height="1.6rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1.6rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M444.373 192H448c35.346 0 64 28.654 64 64 0 35.346-28.654 64-64 64h-1.835a13.867 13.867 0 0 0-12.69 8.404c-2.38 5.396-1.282 11.453 2.517 15.338l1.271 1.271a64 64 0 0 1 .017 90.544 64 64 0 0 1-90.552.008l-1.112-1.115c-4.053-3.963-10.11-5.062-15.505-2.682-5.08 2.178-8.382 7.164-8.404 12.605V448c0 35.346-28.654 64-64 64-35.347 0-64-28.654-64-64-.128-7.113-3.727-12.146-10.32-14.616-5.187-2.29-11.244-1.19-15.129 2.608l-1.271 1.271a64 64 0 0 1-90.544.017 64 64 0 0 1-.008-90.552l1.115-1.112c3.963-4.053 5.062-10.11 2.682-15.505-2.178-5.08-7.164-8.382-12.605-8.404H64c-35.346 0-64-28.654-64-64 0-35.347 28.654-64 64-64 7.113-.128 12.146-3.727 14.616-10.32 2.29-5.187 1.19-11.244-2.608-15.129l-1.271-1.271a64 64 0 0 1-.017-90.544 64 64 0 0 1 90.552-.008l1.112 1.115a13.867 13.867 0 0 0 15.296 2.773 21.333 21.333 0 0 1 4.244-1.364c3.738-2.536 6.058-6.774 6.076-11.332V64c0-35.346 28.654-64 64-64 35.346 0 64 28.654 64 64v1.835c.022 5.527 3.324 10.513 8.614 12.781 5.186 2.29 11.243 1.19 15.128-2.608l1.271-1.271a64 64 0 0 1 90.544-.017 64 64 0 0 1 .008 90.552l-1.115 1.112a13.867 13.867 0 0 0-2.773 15.296 21.333 21.333 0 0 1 1.364 4.244c2.536 3.738 6.774 6.058 11.332 6.076zm1.707 85.333H448c11.782 0 21.333-9.55 21.333-21.333 0-11.782-9.55-21.333-21.333-21.333h-3.712a56.533 56.533 0 0 1-51.736-34.263 21.333 21.333 0 0 1-1.545-5.635c-7.068-20.162-2.163-42.777 13.108-58.387l1.288-1.289a21.333 21.333 0 0 0-.016-30.203 21.333 21.333 0 0 0-30.195.008l-1.448 1.446c-16.52 16.16-41.215 20.638-62.148 11.398-20.71-8.877-34.173-29.204-34.263-51.822V64c0-11.782-9.55-21.333-21.333-21.333-11.782 0-21.333 9.55-21.333 21.333v3.712a56.533 56.533 0 0 1-34.263 51.736 21.333 21.333 0 0 1-5.635 1.545c-20.162 7.068-42.777 2.163-58.387-13.108l-1.289-1.288a21.333 21.333 0 0 0-30.203.016 21.333 21.333 0 0 0 .008 30.195l1.446 1.448c16.16 16.52 20.638 41.215 11.811 61.108-8.012 21.786-28.53 36.46-52.235 37.01H64c-11.782 0-21.333 9.55-21.333 21.333 0 11.782 9.55 21.333 21.333 21.333h3.712c22.532.09 42.86 13.552 51.645 34.053 9.331 21.143 4.854 45.837-11.472 62.525l-1.288 1.289a21.333 21.333 0 0 0 .016 30.203 21.333 21.333 0 0 0 30.195-.008l1.448-1.446c16.52-16.16 41.215-20.638 61.108-11.811 21.786 8.012 36.46 28.53 37.01 52.235V448c0 11.782 9.55 21.333 21.333 21.333 11.782 0 21.333-9.55 21.333-21.333v-3.712c.09-22.532 13.552-42.86 34.053-51.645 21.143-9.331 45.837-4.854 62.525 11.472l1.289 1.288a21.333 21.333 0 0 0 30.203-.016 21.333 21.333 0 0 0-.008-30.195l-1.446-1.448c-16.134-16.493-20.623-41.133-11.352-62.253 8.9-20.651 29.197-34.068 51.776-34.158zm-190.08 64c-47.128 0-85.333-38.205-85.333-85.333s38.205-85.333 85.333-85.333 85.333 38.205 85.333 85.333-38.205 85.333-85.333 85.333zm0-42.666c23.564 0 42.667-19.103 42.667-42.667S279.564 213.333 256 213.333 213.333 232.436 213.333 256s19.103 42.667 42.667 42.667z"
                        fill="hsl(206,23%,69%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Label>
      </Styled(Input.Label)>
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c3"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render input without problem when given an icon label and label position 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1.1rem;
  color: hsl(206,16%,60%);
  background: hsl(216,45%,98%);
  border-left: 1px solid hsl(207,22%,90%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 1.6rem;
  line-height: 1.6rem;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={
    Object {
      "icon": "cog",
    }
  }
  labelPosition="right"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
      <Styled(Input.Label)
        label={
          Object {
            "icon": "cog",
          }
        }
        position="right"
      >
        <Input.Label
          className="c2"
          label={
            Object {
              "icon": "cog",
            }
          }
          position="right"
        >
          <div
            className="c2"
          >
            <Styled(Icon)
              color="hsl(206,23%,69%)"
              height="1.6rem"
              name="cog"
              width="1.6rem"
            >
              <Icon
                className=""
                color="hsl(206,23%,69%)"
                height="1.6rem"
                name="cog"
                spin={false}
                width="1.6rem"
              >
                <styled.div
                  className=""
                  height="1.6rem"
                  spin={false}
                  width="1.6rem"
                >
                  <div
                    className="c3"
                    height="1.6rem"
                    width="1.6rem"
                  >
                    <svg
                      height="1.6rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1.6rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M444.373 192H448c35.346 0 64 28.654 64 64 0 35.346-28.654 64-64 64h-1.835a13.867 13.867 0 0 0-12.69 8.404c-2.38 5.396-1.282 11.453 2.517 15.338l1.271 1.271a64 64 0 0 1 .017 90.544 64 64 0 0 1-90.552.008l-1.112-1.115c-4.053-3.963-10.11-5.062-15.505-2.682-5.08 2.178-8.382 7.164-8.404 12.605V448c0 35.346-28.654 64-64 64-35.347 0-64-28.654-64-64-.128-7.113-3.727-12.146-10.32-14.616-5.187-2.29-11.244-1.19-15.129 2.608l-1.271 1.271a64 64 0 0 1-90.544.017 64 64 0 0 1-.008-90.552l1.115-1.112c3.963-4.053 5.062-10.11 2.682-15.505-2.178-5.08-7.164-8.382-12.605-8.404H64c-35.346 0-64-28.654-64-64 0-35.347 28.654-64 64-64 7.113-.128 12.146-3.727 14.616-10.32 2.29-5.187 1.19-11.244-2.608-15.129l-1.271-1.271a64 64 0 0 1-.017-90.544 64 64 0 0 1 90.552-.008l1.112 1.115a13.867 13.867 0 0 0 15.296 2.773 21.333 21.333 0 0 1 4.244-1.364c3.738-2.536 6.058-6.774 6.076-11.332V64c0-35.346 28.654-64 64-64 35.346 0 64 28.654 64 64v1.835c.022 5.527 3.324 10.513 8.614 12.781 5.186 2.29 11.243 1.19 15.128-2.608l1.271-1.271a64 64 0 0 1 90.544-.017 64 64 0 0 1 .008 90.552l-1.115 1.112a13.867 13.867 0 0 0-2.773 15.296 21.333 21.333 0 0 1 1.364 4.244c2.536 3.738 6.774 6.058 11.332 6.076zm1.707 85.333H448c11.782 0 21.333-9.55 21.333-21.333 0-11.782-9.55-21.333-21.333-21.333h-3.712a56.533 56.533 0 0 1-51.736-34.263 21.333 21.333 0 0 1-1.545-5.635c-7.068-20.162-2.163-42.777 13.108-58.387l1.288-1.289a21.333 21.333 0 0 0-.016-30.203 21.333 21.333 0 0 0-30.195.008l-1.448 1.446c-16.52 16.16-41.215 20.638-62.148 11.398-20.71-8.877-34.173-29.204-34.263-51.822V64c0-11.782-9.55-21.333-21.333-21.333-11.782 0-21.333 9.55-21.333 21.333v3.712a56.533 56.533 0 0 1-34.263 51.736 21.333 21.333 0 0 1-5.635 1.545c-20.162 7.068-42.777 2.163-58.387-13.108l-1.289-1.288a21.333 21.333 0 0 0-30.203.016 21.333 21.333 0 0 0 .008 30.195l1.446 1.448c16.16 16.52 20.638 41.215 11.811 61.108-8.012 21.786-28.53 36.46-52.235 37.01H64c-11.782 0-21.333 9.55-21.333 21.333 0 11.782 9.55 21.333 21.333 21.333h3.712c22.532.09 42.86 13.552 51.645 34.053 9.331 21.143 4.854 45.837-11.472 62.525l-1.288 1.289a21.333 21.333 0 0 0 .016 30.203 21.333 21.333 0 0 0 30.195-.008l1.448-1.446c16.52-16.16 41.215-20.638 61.108-11.811 21.786 8.012 36.46 28.53 37.01 52.235V448c0 11.782 9.55 21.333 21.333 21.333 11.782 0 21.333-9.55 21.333-21.333v-3.712c.09-22.532 13.552-42.86 34.053-51.645 21.143-9.331 45.837-4.854 62.525 11.472l1.289 1.288a21.333 21.333 0 0 0 30.203-.016 21.333 21.333 0 0 0-.008-30.195l-1.446-1.448c-16.134-16.493-20.623-41.133-11.352-62.253 8.9-20.651 29.197-34.068 51.776-34.158zm-190.08 64c-47.128 0-85.333-38.205-85.333-85.333s38.205-85.333 85.333-85.333 85.333 38.205 85.333 85.333-38.205 85.333-85.333 85.333zm0-42.666c23.564 0 42.667-19.103 42.667-42.667S279.564 213.333 256 213.333 213.333 232.436 213.333 256s19.103 42.667 42.667 42.667z"
                        fill="hsl(206,23%,69%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Label>
      </Styled(Input.Label)>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render loading without problem 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.8rem;
  height: 1.8rem;
  margin-right: 0.7rem;
  border-radius: 50%;
  background: hsl(0,100%,100%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 2rem;
  line-height: 2rem;
  -webkit-animation: iVXCSc 3s linear infinite;
  animation: iVXCSc 3s linear infinite;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
      <Styled(Input.Status)
        hasFocus={false}
        status="loading"
      >
        <Input.Status
          className="c2"
          hasFocus={false}
          status="loading"
        >
          <div
            className="c2"
          >
            <Styled(Icon)
              color="hsl(200, 74%, 46%)"
              height="2rem"
              name="circle-notch"
              spin={true}
              width="2rem"
            >
              <Icon
                className=""
                color="hsl(200, 74%, 46%)"
                height="2rem"
                name="circle-notch"
                spin={true}
                width="2rem"
              >
                <styled.div
                  className=""
                  height="2rem"
                  spin={true}
                  width="2rem"
                >
                  <div
                    className="c3"
                    height="2rem"
                    width="2rem"
                  >
                    <svg
                      height="2rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="2rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
                        fill="hsl(200, 74%, 46%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Status>
      </Styled(Input.Status)>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render search without problem 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.8rem;
  height: 1.8rem;
  margin-right: 0.7rem;
  border-radius: 50%;
  background: hsl(207,22%,90%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 1.1rem;
  line-height: 1.1rem;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={true}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
      <Styled(Input.Status)
        hasFocus={false}
        status="search"
      >
        <Input.Status
          className="c2"
          hasFocus={false}
          status="search"
        >
          <div
            className="c2"
          >
            <Styled(Icon)
              color="hsl(0, 100%, 100%)"
              height="1.1rem"
              name="search"
              spin={false}
              width="1.1rem"
            >
              <Icon
                className=""
                color="hsl(0, 100%, 100%)"
                height="1.1rem"
                name="search"
                spin={false}
                width="1.1rem"
              >
                <styled.div
                  className=""
                  height="1.1rem"
                  spin={false}
                  width="1.1rem"
                >
                  <div
                    className="c3"
                    height="1.1rem"
                    width="1.1rem"
                  >
                    <svg
                      height="1.1rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1.1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M384.68 354.51l78.405 78.405c8.331 8.331 8.331 21.839 0 30.17-8.331 8.331-21.839 8.331-30.17 0l-78.404-78.404c-32.847 26.274-74.51 41.986-119.844 41.986-106.039 0-192-85.962-192-192 0-106.039 85.961-192 192-192 106.038 0 192 85.961 192 192 0 45.333-15.712 86.997-41.986 119.844zm-42.464-16.24C368.09 311.417 384 274.9 384 234.667c0-82.475-66.859-149.334-149.333-149.334-82.475 0-149.334 66.86-149.334 149.334S152.193 384 234.667 384c40.233 0 76.75-15.91 103.603-41.784a21.534 21.534 0 0 1 3.946-3.946z"
                        fill="hsl(0, 100%, 100%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Status>
      </Styled(Input.Status)>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render search without problem when focused 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.8rem;
  height: 1.8rem;
  margin-right: 0.7rem;
  border-radius: 50%;
  background: hsl(207,22%,90%);
  background: hsl(200,74%,46%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
  border-color: hsl(200,74%,46%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 1.1rem;
  line-height: 1.1rem;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={true}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={true}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
      <Styled(Input.Status)
        hasFocus={true}
        status="search"
      >
        <Input.Status
          className="c2"
          hasFocus={true}
          status="search"
        >
          <div
            className="c2"
          >
            <Styled(Icon)
              color="hsl(0, 100%, 100%)"
              height="1.1rem"
              name="search"
              spin={false}
              width="1.1rem"
            >
              <Icon
                className=""
                color="hsl(0, 100%, 100%)"
                height="1.1rem"
                name="search"
                spin={false}
                width="1.1rem"
              >
                <styled.div
                  className=""
                  height="1.1rem"
                  spin={false}
                  width="1.1rem"
                >
                  <div
                    className="c3"
                    height="1.1rem"
                    width="1.1rem"
                  >
                    <svg
                      height="1.1rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1.1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M384.68 354.51l78.405 78.405c8.331 8.331 8.331 21.839 0 30.17-8.331 8.331-21.839 8.331-30.17 0l-78.404-78.404c-32.847 26.274-74.51 41.986-119.844 41.986-106.039 0-192-85.962-192-192 0-106.039 85.961-192 192-192 106.038 0 192 85.961 192 192 0 45.333-15.712 86.997-41.986 119.844zm-42.464-16.24C368.09 311.417 384 274.9 384 234.667c0-82.475-66.859-149.334-149.333-149.334-82.475 0-149.334 66.86-149.334 149.334S152.193 384 234.667 384c40.233 0 76.75-15.91 103.603-41.784a21.534 21.534 0 0 1 3.946-3.946z"
                        fill="hsl(0, 100%, 100%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Status>
      </Styled(Input.Status)>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render success without problem 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.8rem;
  height: 1.8rem;
  margin-right: 0.7rem;
  border-radius: 50%;
  background: hsl(89,53%,52%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
  border-color: hsl(89,53%,52%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 1.1rem;
  line-height: 1.1rem;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={true}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={true}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
      <Styled(Input.Status)
        hasFocus={false}
        status="success"
      >
        <Input.Status
          className="c2"
          hasFocus={false}
          status="success"
        >
          <div
            className="c2"
          >
            <Styled(Icon)
              color="hsl(0, 100%, 100%)"
              height="1.1rem"
              name="check-mark"
              spin={false}
              width="1.1rem"
            >
              <Icon
                className=""
                color="hsl(0, 100%, 100%)"
                height="1.1rem"
                name="check-mark"
                spin={false}
                width="1.1rem"
              >
                <styled.div
                  className=""
                  height="1.1rem"
                  spin={false}
                  width="1.1rem"
                >
                  <div
                    className="c3"
                    height="1.1rem"
                    width="1.1rem"
                  >
                    <svg
                      height="1.1rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1.1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M411.582 134.248c8.33-8.33 21.838-8.33 30.17 0 8.33 8.332 8.33 21.84 0 30.17L207.085 399.085c-8.331 8.331-21.839 8.331-30.17 0L70.248 292.418c-8.33-8.33-8.33-21.838 0-30.17 8.332-8.33 21.84-8.33 30.17 0L192 353.83l219.582-219.582z"
                        fill="hsl(0, 100%, 100%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Status>
      </Styled(Input.Status)>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render warning without problem 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.8rem;
  height: 1.8rem;
  margin-right: 0.7rem;
  border-radius: 50%;
  background: hsl(34,91%,65%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
  border-color: hsl(34,91%,65%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 2rem;
  line-height: 2rem;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={true}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={true}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
      <Styled(Input.Status)
        hasFocus={false}
        status="warning"
      >
        <Input.Status
          className="c2"
          hasFocus={false}
          status="warning"
        >
          <div
            className="c2"
          >
            <Styled(Icon)
              color="hsl(0, 100%, 100%)"
              height="2rem"
              name="exclamation-mark"
              spin={false}
              width="2rem"
            >
              <Icon
                className=""
                color="hsl(0, 100%, 100%)"
                height="2rem"
                name="exclamation-mark"
                spin={false}
                width="2rem"
              >
                <styled.div
                  className=""
                  height="2rem"
                  spin={false}
                  width="2rem"
                >
                  <div
                    className="c3"
                    height="2rem"
                    width="2rem"
                  >
                    <svg
                      height="2rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="2rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 492C125.66 492 20 386.34 20 256S125.66 20 256 20s236 105.66 236 236-105.66 236-236 236zm0-138.373c10.784 0 19.525-8.742 19.525-19.525 0-10.784-8.741-19.526-19.525-19.526-10.784 0-19.525 8.742-19.525 19.526 0 10.783 8.741 19.525 19.525 19.525zm-19.525-175.729V256c0 10.784 8.741 19.525 19.525 19.525 10.784 0 19.525-8.741 19.525-19.525v-78.102c0-10.783-8.741-19.525-19.525-19.525-10.784 0-19.525 8.742-19.525 19.525z"
                        fill="hsl(0, 100%, 100%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Status>
      </Styled(Input.Status)>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render withouth a problem 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id="test"
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder="default input"
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id="test"
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="default input"
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id="test"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="default input"
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render withouth a problem when fluid 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={true}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value={null}
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="100%"
  >
    <div
      className="c0"
      disabled={false}
      width="100%"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render withouth a problem when focused and unfocused 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
  border-color: hsl(200,74%,46%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value={null}
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={true}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render withouth a problem when focused and unfocused 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value={null}
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render withouth a problem when given a type 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={true}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="password"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="password"
          value=""
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render withouth a problem when given a width 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 123rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value={null}
  warning={false}
  width="123rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="123rem"
  >
    <div
      className="c0"
      disabled={false}
      width="123rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should render withouth a problem when text changed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
  border-color: hsl(200,74%,46%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={false}
  success={false}
  tabIndex="0"
  value={null}
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={true}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value="hello"
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value="hello"
        />
      </styled.input>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should update the component when controlled value is changed 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.8rem;
  height: 1.8rem;
  margin-right: 0.7rem;
  border-radius: 50%;
  background: hsl(207,22%,90%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 1.1rem;
  line-height: 1.1rem;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={true}
  success={false}
  tabIndex="0"
  value=""
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
      <Styled(Input.Status)
        hasFocus={false}
        status="search"
      >
        <Input.Status
          className="c2"
          hasFocus={false}
          status="search"
        >
          <div
            className="c2"
          >
            <Styled(Icon)
              color="hsl(0, 100%, 100%)"
              height="1.1rem"
              name="search"
              spin={false}
              width="1.1rem"
            >
              <Icon
                className=""
                color="hsl(0, 100%, 100%)"
                height="1.1rem"
                name="search"
                spin={false}
                width="1.1rem"
              >
                <styled.div
                  className=""
                  height="1.1rem"
                  spin={false}
                  width="1.1rem"
                >
                  <div
                    className="c3"
                    height="1.1rem"
                    width="1.1rem"
                  >
                    <svg
                      height="1.1rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1.1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M384.68 354.51l78.405 78.405c8.331 8.331 8.331 21.839 0 30.17-8.331 8.331-21.839 8.331-30.17 0l-78.404-78.404c-32.847 26.274-74.51 41.986-119.844 41.986-106.039 0-192-85.962-192-192 0-106.039 85.961-192 192-192 106.038 0 192 85.961 192 192 0 45.333-15.712 86.997-41.986 119.844zm-42.464-16.24C368.09 311.417 384 274.9 384 234.667c0-82.475-66.859-149.334-149.333-149.334-82.475 0-149.334 66.86-149.334 149.334S152.193 384 234.667 384c40.233 0 76.75-15.91 103.603-41.784a21.534 21.534 0 0 1 3.946-3.946z"
                        fill="hsl(0, 100%, 100%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Status>
      </Styled(Input.Status)>
    </div>
  </styled.div>
</TextInput>
`;

exports[`<TextInput /> should update the component when controlled value is changed 2`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.8rem;
  height: 1.8rem;
  margin-right: 0.7rem;
  border-radius: 50%;
  background: hsl(207,22%,90%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c1::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c1:-moz-placeholder {
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c3 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 1.1rem;
  line-height: 1.1rem;
}

<TextInput
  _onBlur={[Function]}
  _onFocus={[Function]}
  className=""
  disabled={false}
  error={false}
  fluid={false}
  ghost={false}
  id=""
  info={false}
  label={null}
  labelPosition="left"
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  password={false}
  placeHolder=""
  search={true}
  success={false}
  tabIndex="0"
  value="@test@ "
  warning={false}
  width="25rem"
>
  <styled.div
    className=""
    disabled={false}
    error={false}
    ghost={false}
    hasFocus={false}
    info={false}
    success={false}
    warning={false}
    width="25rem"
  >
    <div
      className="c0"
      disabled={false}
      width="25rem"
    >
      <styled.input
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        tabIndex="0"
        type="text"
        value=""
      >
        <input
          className="c1"
          disabled={false}
          id=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          tabIndex="0"
          type="text"
          value=""
        />
      </styled.input>
      <Styled(Input.Status)
        hasFocus={false}
        status="search"
      >
        <Input.Status
          className="c2"
          hasFocus={false}
          status="search"
        >
          <div
            className="c2"
          >
            <Styled(Icon)
              color="hsl(0, 100%, 100%)"
              height="1.1rem"
              name="search"
              spin={false}
              width="1.1rem"
            >
              <Icon
                className=""
                color="hsl(0, 100%, 100%)"
                height="1.1rem"
                name="search"
                spin={false}
                width="1.1rem"
              >
                <styled.div
                  className=""
                  height="1.1rem"
                  spin={false}
                  width="1.1rem"
                >
                  <div
                    className="c3"
                    height="1.1rem"
                    width="1.1rem"
                  >
                    <svg
                      height="1.1rem"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1.1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M384.68 354.51l78.405 78.405c8.331 8.331 8.331 21.839 0 30.17-8.331 8.331-21.839 8.331-30.17 0l-78.404-78.404c-32.847 26.274-74.51 41.986-119.844 41.986-106.039 0-192-85.962-192-192 0-106.039 85.961-192 192-192 106.038 0 192 85.961 192 192 0 45.333-15.712 86.997-41.986 119.844zm-42.464-16.24C368.09 311.417 384 274.9 384 234.667c0-82.475-66.859-149.334-149.333-149.334-82.475 0-149.334 66.86-149.334 149.334S152.193 384 234.667 384c40.233 0 76.75-15.91 103.603-41.784a21.534 21.534 0 0 1 3.946-3.946z"
                        fill="hsl(0, 100%, 100%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </div>
        </Input.Status>
      </Styled(Input.Status)>
    </div>
  </styled.div>
</TextInput>
`;
